<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Default user credentials -->
    <string name="default_user">itguy.1@fe.up.pt</string>
    <string name="default_pass">123456</string>

    <!-- Application Information -->
    <string name="app_name">TDIN Trouble Tickets</string>
    <string name="action_settings">Settings</string>

    <!-- For dialogs -->
    <string name="fetching_data">Fetching data</string>

    <!-- Generic -->
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="refresh">Refresh</string>

    <!-- For toasts -->
    <string name="connectionexception">Failed connection!</string>

    <!-- For user forms -->
    <string name="form_name">Name</string>
    <string name="form_pw">Password</string>
    <string name="form_pw_repeat">Repeat Password</string>
    <string name="form_email">E-mail</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create">Create</string>

    <!-- Forms errors -->
    <string name="form_error_diff_pass">Passwords do not match!</string>
    <string name="form_error_no_user">Invalid username!</string>
    <string name="form_error_invalid_email">Invalid e-mail!</string>

    <!-- Default values -->
    <string name="default_title">Title</string>
    <string name="default_description">This is a brief example description, just to show how a long description is presented on the screen</string>
    <string name="default_name">User Name</string>
    <string name="default_email">email@email.com</string>
    <string name="default_date">27/05/2014 at 19:00:24</string>
    <string name="default_id">0JD813JJIQW8HDUasdqwqdqwdqw1</string>

    <!-- Prefixes (Ticket) -->
    <string name="pre_name">Submited by:</string>
    <string name="pre_email">Email:</string>
    <string name="pre_date">Date:</string>
    <string name="pre_id">ID:</string>

    <!-- Ticket Buttons -->
    <string name="btn_reply">Reply</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_create_secondary">Create Secondary Ticket</string>

    <!-- hints -->
    <string name="hint_reply">Write reply here</string>
    <string name="hint_secondary_ticket">Write new ticket</string>
    <string name="hint_secondary_ticket_title">Write new ticket title</string>

    <!-- Menus Text -->
    <string name="tab_item_assigned">Assigned Tickets</string>
    <string name="tab_item_unassigned">Unassigned Tickets</string>
    <string name="fragment_stack_support">Fragment/Stack</string>
    <string name="home">Go home</string>
    <string name="new_fragment">Add new</string>
    <string name="delete_fragment">Pop top</string>

</resources>