<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:gravity="center_vertical|center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/form_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_email"
        android:inputType="textEmailAddress"
        android:text="@string/default_user" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/form_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/form_pw"
        android:inputType="textPassword"
        android:text="@string/default_pass" />

    <!--
    Add this 3 lines for button style
    android:background="@drawable/app_btn_style"
    android:textColor="@drawable/app_btn_style"
    android:padding="10dp"
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/app_btn_style"
            android:onClick="loginClick"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@drawable/app_btn_style" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/app_btn_style"
            android:onClick="registerClick"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@drawable/app_btn_style" />
    </LinearLayout>

</LinearLayout>