<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/error_lay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#CC0000"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/register_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:padding="5dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:text="@string/register"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="true"
        android:gravity="center_vertical|center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/form_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/form_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/form_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/form_email"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/form_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/form_pw"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/form_pw2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/form_pw_repeat"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button_cancel_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/app_btn_style"
                android:onClick="cancelClick"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@drawable/app_btn_style" />

            <Button
                android:id="@+id/button_createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/app_btn_style"
                android:onClick="registerClick"
                android:padding="10dp"
                android:text="@string/create"
                android:textColor="@drawable/app_btn_style" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>